# r1cs-solver

./: .gitignore  LICENSE  README.md  r1cs-solver.cabal
examples/: README.md
examples/circuits/circomlib/: README.md  cmp.circom
examples/circuits/simple/: fibonacci.circom  is_boolean.circom  rightshift_unsound.circom  standard_basis.circom  sum_of_cubes.circom
examples/tests/: Main.hs
examples/tests/CircomLib/: Common.hs  Main.hs
examples/tests/CircomLib/Lib/: Comparators.hs  ForceEqualIfEnabled.hs  MultiAND.hs  MultiMux.hs  Switcher.hs
examples/tests/MOOC/: Common.hs  Main.hs
examples/tests/MOOC/Lab/: CheckBitLength.hs  CheckWellFormedness.hs  FloatAdd.hs  LeftShift.hs  LessThan.hs  MSNZB.hs  Normalize.hs  Num2Bits.hs  RightShift.hs  RoundAndCheck.hs
examples/tests/Simple/: Common.hs  Main.hs
examples/tests/Simple/Misc/: Fibonacci.hs  IsBoolean.hs  RightShift.hs  StdBasis.hs  SumOfCubes.hs
src/: R1CS.hs
src/R1CS/: Compile.hs  Constraints.hs  Misc.hs  Params.hs  Solver.hs  Witness.hs
src/R1CS/Algebra/: SmallField.hs  TestField.hs
src/R1CS/Parser/: SymFile.hs  WtnsJSON.hs
src/R1CS/Parser/Constraint/: JSON.hs  Text.hs
src/R1CS/Test/: Runner.hs  Spec.hs
